Vector motion blur on hair. #42475

Closed
opened 2014-11-02 18:10:42 +01:00 by tuqueque tuquequin · 13 comments

System Information
Ubuntu Utopic (14.10) x64
(two) Nvidia Geforce GTX 550 Ti.
Drivers: 304.123 (proprietary for CUDA).

Blender Version
blender-2.72-625843d-linux-glibc211-x86_64 (downloaded from Buildbot).

This bug has been present in all builds I've tested since I discovered the bug, around 5 months ago.

Short description of error
Basically, in this scene I'm attaching, Vector motion blur gives a HUGE-weird-horrible smudge streak of blur on the hair... The problem appears randomly on frames.

Exact steps for others to reproduce the error
Attached is the (simplified) scene that gives me this error. I'm also attaching a short video showing the error I get.

MotionBlurBug.mp4
MotionBlurBug.7z

Thank you!

**System Information** Ubuntu Utopic (14.10) x64 (two) Nvidia Geforce GTX 550 Ti. Drivers: 304.123 (proprietary for CUDA). **Blender Version** blender-2.72-625843d-linux-glibc211-x86_64 (downloaded from Buildbot). This bug has been present in all builds I've tested since I discovered the bug, around 5 months ago. **Short description of error** Basically, in this scene I'm attaching, Vector motion blur gives a HUGE-weird-horrible smudge streak of blur on the hair... The problem appears randomly on frames. **Exact steps for others to reproduce the error** Attached is the (simplified) scene that gives me this error. I'm also attaching a short video showing the error I get. [MotionBlurBug.mp4](https://archive.blender.org/developer/F121317/MotionBlurBug.mp4) [MotionBlurBug.7z](https://archive.blender.org/developer/F121311/MotionBlurBug.7z) Thank you!

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @tuqueque

Added subscriber: @tuqueque
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Lukas Tönne was assigned by Julian Eisel 2014-11-03 18:39:08 +01:00
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

I guess this one is for you, too @LukasTonne!?

I guess this one is for you, too @LukasTonne!?
Lukas Tönne removed their assignment 2014-11-05 10:08:12 +01:00
Sergey Sharybin was assigned by Lukas Tönne 2014-11-05 10:08:12 +01:00
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

On his own request i'm reassigning to @sergey. This seems to be an issue with the speed vector pass.

On his own request i'm reassigning to @sergey. This seems to be an issue with the speed vector pass.
Member

Added subscriber: @Ton

Added subscriber: @Ton
Member

Julian:

Same issue again. I don't consider this good triaging work.

  • Analyse the issue, confirm it. Write down what you saw.
  • Tell whether this is cycles or BI
  • check if there are ways to make the error go away
  • who coded this?
  • just write anything that would help getting someone else to fix this more efficiently
Julian: Same issue again. I don't consider this good triaging work. - Analyse the issue, confirm it. Write down what you saw. - Tell whether this is cycles or BI - check if there are ways to make the error go away - who coded this? - just write anything that would help getting someone else to fix this more efficiently

This issue was referenced by 729dc98be1

This issue was referenced by 729dc98be167a77e418489d19042168863085845

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 729dc98be1.

Closed by commit 729dc98be1.

This issue was referenced by blender/cycles@52704a90c9

This issue was referenced by blender/cycles@52704a90c9b6d8d8f2064fa5f7f5bc0e72c4a024
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42475
No description provided.